corrections and document changes
